Added config to the mod